--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Zadyx",
-  "license": "ISC"  
+  "license": "ISC",
+  "dependencies": {
+    "discord.js": "^11.2.1"
+  }
 }
